# luabrotli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  addClass.lua
cmake/brotli/: CMakeLists.txt
src/: CMakeLists.txt  brotli.lua  common.hpp  constants.cpp  constants.hpp  init_classes.hpp  luabrotli.version  main.cpp
src/objects/: Compressor.cpp  Compressor.hpp  Decompressor.cpp  Decompressor.hpp
tests/: test.lua
